<resources>
    <string name="app_name" translatable="false">Gwybie</string>
    <string name="back">Back</string>
    <string name="level1">Level 01</string>
    <string name="level2">Level 02</string>
    <string name="level3">Level 03</string>
    <string name="level4">Level 04</string>
    <string name="level6">Level 06</string>
    <string name="level5">Level 05</string>
    <string name="level7">Level 07</string>
    <string name="level8">Level 08</string>
    <string name="level9">Level 09</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="play">PLAY</string>
    <string name="no_level_provided">Can not load level.</string>
    <string name="lose_all_progress">Do you want to quit?\nProceeding will lose all progress.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_preview">Preview is not available.</string>
    <string name="invalid_info">Invalid password/username.</string>
    <string name="time_example" translatable="false">HH:MM:SS.mmm</string>
    <string name="ok">OK</string>
    <string name="levels">Levels</string>
    <string name="how_to_play">How to Play</string>
    <string name="credits">Credits</string>
    <string name="go">Go!</string>
    <string name="tileset">TileSet:</string>
    <string name="tileset_link">https://cainos.itch.io/pixel-art-top-down-basic</string>
    <string name="sound_effects">Sounds Effects:</string>
    <string name="rpg_music_link">https://opengameart.org/content/rpgmusic</string>
    <string name="pixabay_link">https://pixabay.com/sound-effects/</string>
    <string name="music">Music:</string>
    <string name="by_avasay_sayava">by Avasay_Sayava</string>
</resources>