<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="horizontal"
    tools:context=".activity.MenuActivity">

    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/back" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="40dp"
        app:columnCount="9"
        app:layout_constraintEnd_toStartOf="@+id/info_bar"
        app:layout_constraintStart_toEndOf="@+id/sidebar"
        app:layout_constraintWidth="match_constraint"
        app:rowCount="9">

        <Button
            android:id="@+id/level1"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level1"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level2"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level2"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level3"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level3"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level4"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level4"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level5"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level5"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level6"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level6"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level7"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level7"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level8"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level8"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/level9"
            android:layout_margin="5dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/monospace"
            android:text="@string/level9"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/info_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_level_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/monospace"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@color/White">

            <com.avasaysayava.bagrutproject.game.LevelPreview
                android:id="@+id/sv_level_preview"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_margin="1dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/monospace"
            android:text="@string/pb_example"
            android:textAlignment="center"
            android:textColor="@color/White" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/monospace"
            android:text="@string/wr_example"
            android:textAlignment="center"
            android:textColor="@color/White" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/default_button"
                android:text="@string/play" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>